--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "next": "14.2.7",
     "pg": "^8.12.0",
     "react": "^18",
